--- a/.github/workflows/buildgo.yaml
+++ b/.github/workflows/buildgo.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Check if Go files changed
         id: check_changes
         run: |
-          if git diff --name-only HEAD~1 HEAD | grep -qE '*.go$'; then
+          if git diff --name-only HEAD~1 HEAD | grep -E '*.go$' | grep -qv '_test.go$'; then
             echo "compile_required=true" >> $GITHUB_OUTPUT
           else
             echo "compile_required=false" >> $GITHUB_OUTPUT
@@ -39,11 +39,11 @@ jobs:
       - name: Install dependencies
         run: go get .
       - name: Build
-        run: go build -o main-linux-${{ matrix.arch }}-${{ inputs.version }} .
+        run: go build -o action-linux-${{ matrix.arch }}-${{ inputs.version }} .
       - uses: actions/upload-artifact@v4
         with:
-          name: main-linux-${{ matrix.arch }}-${{ inputs.version }}
-          path: ./main-linux-${{ matrix.arch }}-${{ inputs.version }}
+          name: action-linux-${{ matrix.arch }}-${{ inputs.version }}
+          path: ./action-linux-${{ matrix.arch }}-${{ inputs.version }}
   commit_binaries:
     needs: [build_go_mods]
     runs-on: ubuntu-latest
