--- a/.github/workflows/buildgo.yaml
+++ b/.github/workflows/buildgo.yaml
@@ -1,30 +1,10 @@
 on:
-  push:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
 jobs:
-  get_build_version:
-    runs-on: ubuntu-latest
-    name: Get Build Version
-    outputs:
-      build_version: ${{ steps.check_build_ver.build_version }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-      - name: Get build version
-        id: check_build_ver
-        run: |
-          if ls -a | grep -qE '^.build_version$'; then
-            if [[ -z "$(cat .build_version)" ]]; then
-              echo "Build version not specified"
-              exit 1
-            fi
-            echo "build_version=$(cat .build_version)" >> $GITHUB_OUTPUT
-          else
-            echo ".build_version file not found"
-            exit 1
-          fi
   check_build_required:
     runs-on: ubuntu-latest
     name: Check If Build Required
@@ -61,13 +41,13 @@ jobs:
       - name: Build
         env:
           BUILD_VER: ${{ needs.get_build_version.outputs.build_version }}
-        run: go build -o action-linux-${{ matrix.arch }}-$BUILD_VER .
+        run: go build -o action-linux-${{ matrix.arch }}-${{ inputs.version }} .
       - uses: actions/upload-artifact@v4
         env:
           BUILD_VER: ${{ needs.get_build_version.outputs.build_version }} 
         with:
-          name: action-linux-${{ matrix.arch }}-$BUILD_VER
-          path: ./action-linux-${{ matrix.arch }}-$BUILD_VER
+          name: action-linux-${{ matrix.arch }}-${{ inputs.version }}
+          path: ./action-linux-${{ matrix.arch }}-${{ inputs.version }}
   commit_binaries:
     needs: [build_go_mods]
     runs-on: ubuntu-latest
