--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Get Build Version
     outputs:
-      build_version: ${{ steps.check_build_ver.build_version }}
+      build_version: ${{ steps.check_build_ver.outputs.build_version }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -27,12 +27,6 @@ jobs:
             echo ".build_version file not found"
             exit 1
           fi
-  debug_build_version:
-    runs-on: ubuntu-latest
-    needs: [get_build_version]
-    steps:
-      - name: Debug Build Version
-        run: echo "Build version is ${{ needs.get_build_version.outputs.build_version }}"
   build_go_bins:
     needs: [get_build_version]
     uses: ./.github/workflows/buildgo.yaml
