--- a/action.yaml
+++ b/action.yaml
@@ -7,7 +7,7 @@ inputs:
   version:
     description: "Version of the action to be run"
     required: false
-    default: "v0_1_1"
+    default: "v0_1_2" #Change value in .build_version
 outputs:
   status:
     description: "Status of article upload API request"
